errors.txt

> Task :eventDeploy
Not running deploy task, skipping commit

> Task :createVersionFile
createVersionFile called. Path C:\Users\david\dev\robotics\frc\MARSLib\src\main\java\frc\robot

> Task :spotlessInternalRegisterDependencies UP-TO-DATE
> Task :spotlessGroovyGradle UP-TO-DATE
> Task :spotlessGroovyGradleApply UP-TO-DATE
> Task :spotlessJava
> Task :spotlessJavaApply
> Task :spotlessJson UP-TO-DATE
> Task :spotlessJsonApply UP-TO-DATE
> Task :spotlessMisc UP-TO-DATE
> Task :spotlessMiscApply UP-TO-DATE
> Task :spotlessApply

> Task :compileJava FAILED
C:\Users\david\dev\robotics\frc\MARSLib\src\main\java\com\marslib\mechanisms\MARSSuperstructure.java:124: warning: [removal] schedule() in Command has been deprecated and marked for removal
      intake.runIntakeCommand().schedule();
                               ^
C:\Users\david\dev\robotics\frc\MARSLib\src\main\java\com\marslib\mechanisms\MARSSuperstructure.java:130: warning: [removal] schedule() in Command has been deprecated and marked for removal
      shooter.spinUpCommand().schedule();
                             ^
C:\Users\david\dev\robotics\frc\MARSLib\src\main\java\com\marslib\mechanisms\MARSSuperstructure.java:132: warning: [removal] schedule() in Command has been deprecated and marked for removal
      shooter.stopCommand().schedule();
                           ^
C:\Users\david\dev\robotics\frc\MARSLib\src\main\java\frc\robot\RobotContainer.java:193: error: cannot find symbol
                      Constants.ShooterConstants.MOTOR_ID,
                                                ^
  symbol:   variable MOTOR_ID
  location: class ShooterConstants
C:\Users\david\dev\robotics\frc\MARSLib\src\main\java\frc\robot\RobotContainer.java:194: error: cannot find symbol
                      Constants.ShooterConstants.CANBUS,
                                                ^
  symbol:   variable CANBUS
  location: class ShooterConstants
2 errors
3 warnings
Compilation Error!
GradleRIO detected this build failed due to a Compile Error (compileJava).
Check that all your files are saved, then scroll up in this log for more information.
[Incubating] Problems report is available at: file:///C:/Users/david/dev/robotics/frc/MARSLib/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  C:\Users\david\dev\robotics\frc\MARSLib\src\main\java\com\marslib\mechanisms\MARSSuperstructure.java:124: warning: [removal] schedule() in Command has been deprecated and marked for removal
        intake.runIntakeCommand().schedule();
                                 ^
  C:\Users\david\dev\robotics\frc\MARSLib\src\main\java\com\marslib\mechanisms\MARSSuperstructure.java:130: warning: [removal] schedule() in Command has been deprecated and marked for removal
        shooter.spinUpCommand().schedule();
                               ^
  C:\Users\david\dev\robotics\frc\MARSLib\src\main\java\com\marslib\mechanisms\MARSSuperstructure.java:132: warning: [removal] schedule() in Command has been deprecated and marked for removal
        shooter.stopCommand().schedule();
                             ^
  C:\Users\david\dev\robotics\frc\MARSLib\src\main\java\frc\robot\RobotContainer.java:193: error: cannot find symbol
                        Constants.ShooterConstants.MOTOR_ID,
                                                  ^
    symbol:   variable MOTOR_ID
    location: class ShooterConstants
  C:\Users\david\dev\robotics\frc\MARSLib\src\main\java\frc\robot\RobotContainer.java:194: error: cannot find symbol
                        Constants.ShooterConstants.CANBUS,
                                                  ^
    symbol:   variable CANBUS
    location: class ShooterConstants
  2 errors
  3 warnings

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

12 actionable tasks: 5 executed, 7 up-to-date
BUILD FAILED in 2s
